<package format="2">
  <name>launchers</name>
  <version>0.0.1</version>
  <description>Package containing multiple launch files</description>

  <maintainer email="lawaty@drolez-apps.cloud">Lawaty</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>control</exec_depend>
  <exec_depend>logger</exec_depend>
  <!-- Add more dependencies as needed -->

  <export>
  </export>
</package>
